--- a/src/opnsense/mvc/app/controllers/OPNsense/Unbound/forms/dnsbl.xml
+++ b/src/opnsense/mvc/app/controllers/OPNsense/Unbound/forms/dnsbl.xml
@@ -21,6 +21,12 @@
         <help>List of domains from where blocklist will be downloaded.</help>
     </field>
     <field>
+        <id>unbound.dnsbl.blocksubdomains</id>
+        <label>Enable</label>
+        <type>checkbox</type>
+        <help>Block subdomains of domains from blocklists too.</help>
+    </field>
+    <field>
         <id>unbound.dnsbl.whitelists</id>
         <label>Whitelist Domains</label>
         <type>select_multiple</type>
