--- a/src/opnsense/mvc/app/controllers/OPNsense/Diagnostics/forms/dns_diagnostics.xml
+++ b/src/opnsense/mvc/app/controllers/OPNsense/Diagnostics/forms/dns_diagnostics.xml
@@ -11,4 +11,10 @@
        <type>text</type>
        <help><![CDATA[Optional DNS server address.]]></help>
     </field>
+    <field>
+       <id>dns.settings.interface</id>
+       <label>Source Address</label>
+       <type>select</type>
+       <help><![CDATA[Optional Interface to use as source address.]]></help>
+    </field>
 </form>
